--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query": "^5.67.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
     "html-react-parser": "^5.2.2",
     "lucide-react": "^0.482.0",
