--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "html-react-parser": "^5.2.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
+    "nextjs-toploader": "^3.8.16",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
