--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "html-react-parser": "^5.2.2",
     "lucide-react": "^0.482.0",
+    "motion": "^12.23.15",
     "next": "15.2.2",
     "nextjs-toploader": "^3.8.16",
     "qs": "^6.14.0",
